--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,20 @@
 server:
-port: 8080
+  port: 8080
+
+spring:
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: sistemalibertyhive@gmail.com
+    password: kpba veuk eqat iaca
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
