--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: sistemalibertyhive@gmail.com
-    password: kpba veuk eqat iaca
+    password: gnam wgvr fcpu yynw
     properties:
       mail:
         smtp:
